<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jeferson.atividade3pdm2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jeferson.atividade3pdm2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jeferson.atividade3pdm2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_primeiro_periodo"
        android:name="com.jeferson.atividade3pdm2.ui.fragments.PrimeiroPeriodoFragment"
        android:label="@string/menu_primeiro_periodo"
        tools:layout="@layout/fragment_primeiro_periodo" />

    <fragment
        android:id="@+id/nav_segundo_periodo"
        android:name="com.jeferson.atividade3pdm2.ui.fragments.SegundoPeriodoFragment"
        android:label="@string/menu_segundo_periodo"
        tools:layout="@layout/fragment_segundo_periodo" />

    <fragment
        android:id="@+id/nav_terceiro_periodo"
        android:name="com.jeferson.atividade3pdm2.ui.fragments.TerceiroPeriodoFragment"
        android:label="@string/menu_terceiro_periodo"
        tools:layout="@layout/fragment_terceiro_periodo" />

    <fragment
        android:id="@+id/nav_quarto_periodo"
        android:name="com.jeferson.atividade3pdm2.ui.fragments.QuartoPeriodoFragment"
        android:label="@string/menu_quarto_periodo"
        tools:layout="@layout/fragment_quarto_periodo" />

    <fragment
        android:id="@+id/nav_quinto_periodo"
        android:name="com.jeferson.atividade3pdm2.ui.fragments.QuintoPeriodoFragment"
        android:label="@string/menu_quinto_periodo"
        tools:layout="@layout/fragment_quinto_periodo" />

    <fragment
        android:id="@+id/nav_sexto_periodo"
        android:name="com.jeferson.atividade3pdm2.ui.fragments.SextoPeriodoFragments"
        android:label="@string/menu_sexto_periodo"
        tools:layout="@layout/fragment_sexto_periodo" />
</navigation>